# sylvan-row

./: .gitignore  Cargo.toml  LICENSE  LICENSE.md  README.md  android-run.sh  android.sh  build.rs  client.sh  compile-android.sh  compile-pc.sh  log4rs.yaml  mapmaker.py  message.txt  server.sh  server_setup  settings.gradle
.github/ISSUE_TEMPLATE/: bug_report.md  feedback.md
android/app/: build.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
assets/: README.md  tiles.tsx
assets/characters/: README.md  balance.ods  characters.kra  chatacters-mini-profiles.kra
assets/characters/cynewynn/: description.txt  properties.pkl
assets/characters/dummy/: properties.pkl
assets/characters/elizabeth/: description.txt  properties.pkl
assets/characters/healer_girl/: description.txt  properties.pkl
assets/characters/hernani/: description.txt  properties.pkl
assets/characters/koldo/: description.txt  properties.pkl
assets/characters/raphaelle/: description.txt  properties.pkl
assets/characters/sniper_girl/: description.txt  properties.pkl
assets/characters/temerity/: description.txt  properties.pkl
assets/characters/time_queen/: description.txt  properties.pkl
assets/gameobjects/: bullet.kra  bullet.kra~  grass.kra  orb.kra  spawnpoint.kra  unbreakable_wall.kra  wall.kra
assets/icon/: icon-big.kra
assets/maps/: map1-cages.map  map1.map  map_maker.map  tiledtestmap.tmx  tiledtestmap_background.csv  tiledtestmap_elim_background.csv  tiledtestmap_elim_foreground.csv  tiledtestmap_foreground.csv
assets/player/: player1.kra  player1.png~
assets/ui/: temp_ability.kra
src/: audio.rs  bevy_audio.rs  bevy_graphics.rs  bevy_immediate.rs  common.rs  const_params.rs  database.rs  filter.rs  game.old  game.rs  gamedata.rs  gameserver.rs  gameserver2.rs  graphics.rs  graphicsold.rs  lib.rs  main.rs  maths.rs  mothership_common.rs  network.rs  ui.rs
(+13 files in other folders)
