[package]
name = "sylvan_row"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1.3.3"
device_query = "2.1.0"
gilrs = "0.10.7"
macroquad = "0.4.8"
rust-embed = "8.5.0"
rusty-pkl = "0.1.2"
serde = { version = "1.0.204", features = ["derive"] }
strum = "0.26.3"
strum_macros = "0.26.4"
tokio = {version = "1.48.0", features = ["full"] }

[build-dependencies]
winresource = "0.1.23"

[profile.release]
opt-level = 3 # looks like this is default already
debug = true # for flamegraph. remove this for release builds
