[package]
name = "sylvan_row"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1.3.3"
chacha20poly1305 = "0.10.1"
device_query = "2.1.0"
gilrs = "0.10.7"
keyring = {version="3.6.3", features = ["windows-native", "linux-native", "apple-native"]}
macroquad = "0.4.8"
opaque-ke = {version="4.1.0-pre.1", features = ["argon2", "serde"]}
pollster = "0.4.0"
rand = "0.8.5"
rand_core = "0.6.4"
redb = "2.6.3"
ring = "0.17.14"
rusty-pkl = "0.1.2"
serde = { version = "1.0.204", features = ["derive"] }
sha2 = "0.10.9"
strum = "0.26.3"
strum_macros = "0.26.4"
tokio = {version = "1.48.0", features = ["full"] }

[build-dependencies]
winresource = "0.1.23"

[profile.release]
opt-level = 3 # looks like this is default already
debug = true # for flamegraph. remove this for release builds
panic = "unwind"
